--- a/index.html
+++ b/index.html
@@ -74,10 +74,244 @@
     </ul>
   </aside>
   <header id="header">
-    header
+    <div class="searchbar justify-left">
+      <button class="svg-button">
+        <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" fill="currentColor" />
+        </svg>
+      </button>
+      <input type="search" id="header-search"/>
+    </div>
+    <div class="profile-section justify-right">
+      <button class="svg-button">
+        <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" fill="currentColor" />
+        </svg>
+      </button>
+      <button class="svg-button profile-avatar">
+        <svg height="48" width="48" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" fill="currentColor" />
+        </svg>
+      </button>
+      <span>
+        Placeholder User
+      </span>
+    </div>
+    <div id="greeting" class="justify-left vertical-center profile">
+      <svg class="profile-avatar" height="72" width="72" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" fill="currentColor" />
+      </svg>
+      <div>
+        <div>Hi there,</div>
+        <div>Placeholder User (@placeholder)</div>
+      </div>
+    </div>
+    <div id="action-buttons" class="justify-right vertical-center">
+      <button class="button">New</button>
+      <button class="button">Upload</button>
+      <button class="button">Share</button>
+    </div>
   </header>
   <div id="main-content">
-    content
+    <bold id="projects-header">Your Projects</bold>
+    <div id="projects-grid">
+      <div class="project-card">
+        <div class="card-content">
+          <bold>Super Cool Project</bold>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+          nibh erat, id facilisis felis accumsan nec.</p>
+        </div>
+        <div class="card-icons">
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="card-content">
+          <bold>Super Cool Project</bold>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+          nibh erat, id facilisis felis accumsan nec.</p>
+        </div>
+        <div class="card-icons">
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="card-content">
+          <bold>Super Cool Project</bold>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+          nibh erat, id facilisis felis accumsan nec.</p>
+        </div>
+        <div class="card-icons">
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="card-content">
+          <bold>Super Cool Project</bold>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+          nibh erat, id facilisis felis accumsan nec.</p>
+        </div>
+        <div class="card-icons">
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="card-content">
+          <bold>Super Cool Project</bold>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+          nibh erat, id facilisis felis accumsan nec.</p>
+        </div>
+        <div class="card-icons">
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="card-content">
+          <bold>Super Cool Project</bold>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+          nibh erat, id facilisis felis accumsan nec.</p>
+        </div>
+        <div class="card-icons">
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" />
+            </svg>
+          </button>
+          <button class="svg-button">
+            <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div id="side-content">
+      <bold id="announcements-header">Announcements</bold>
+      <div id="announcements">
+        <div class="announcement">
+          <bold>Site Maintenance</bold>
+          <p>Vestibulum condimentum tellus lacus, in accumsan elit
+          maximus ac. Donec hendrerit sodales congue...</p>
+        </div>
+        <hr>
+        <div class="announcement">
+          <bold>Community Share Day</bold>
+          <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero.
+          Aliquam dictum accumsan porttitor...</p>
+        </div>
+        <hr>
+        <div class="announcement">
+          <bold>Updated Privacy Policy</bold>
+          <p>Phasellus efficitur nisi eget elit consectetur, eget
+          condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+        </div>
+      </div>
+      <bold id="trending-header">Trending</bold>
+      <div id="trending">
+        <div class="user-profile">
+          <svg class="profile-avatar" height="48" width="48" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" fill="currentColor" />
+          </svg>
+          <div>
+            <bold>@placeholder</bold>
+            <div>Placeholder User</div>
+          </div>
+        </div>
+        <div class="user-profile">
+          <svg class="profile-avatar" height="48" width="48" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" fill="currentColor" />
+          </svg>
+          <div>
+            <bold>@placeholder</bold>
+            <div>Placeholder User</div>
+          </div>
+        </div>
+        <div class="user-profile">
+          <svg class="profile-avatar" height="48" width="48" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" fill="currentColor" />
+          </svg>
+          <div>
+            <bold>@placeholder</bold>
+            <div>Placeholder User</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
